--- a/roles/arch-common/templates/bash_aliases.bash.j2
+++ b/roles/arch-common/templates/bash_aliases.bash.j2
@@ -12,7 +12,7 @@ alias dmesg='dmesg -HL'
 alias dart='dart -c' # Force Dart to run in checked mode on this machine
 
 ## ls ##
-alias ls='ls -ahG'
+alias ls='ls -ah --color=auto'
 alias lr='ls -R'                    # recursive ls
 alias ll='ls -l'
 alias la='ll -A'
