Add fortune to login

--- a/roles/arch-common/templates/bash.bashrc.j2
+++ b/roles/arch-common/templates/bash.bashrc.j2
@@ -1,5 +1,8 @@
 # {{ ansible_managed }}
 
+# Print a fortune on login!
+echo -e; fortune; echo -e
+
 ETCDIR="/usr/local/etc"
 
 # Custom colour variables for Bash prompt
