--- a/roles/arch-common/templates/fstab.j2
+++ b/roles/arch-common/templates/fstab.j2
@@ -1,4 +1,5 @@
 # {{ ansible_managed }}
 #
 # <file system>	<dir>		<type>	<options>			<dump>	<pass>
-LABEL=USB-Box	/mnt/storage	hfsplus	defaults,noauto,relatime,rw	0	0
+/dev/mmcblk0p1	/boot		vfat	defaults,rw,relatime,auto	0	2
+LABEL=USB-Box	/mnt/storage	hfsplus	defaults,rw,relatime,noauto	0	0
